Placar funcionando em arquivo pontuação.js, porém sem conseguir parar o jogo ao chegar em 10.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
         </header>
 
         <section id="gamejs">
-            <canvas width="600" height="400"></canvas> 
+            <canvas id="telagame" width="600" height="400"></canvas> 
         </section>
 
         <section id="abaixodojogo">
             <canvas id="baseplacar" width="600" height="50"></canvas>
+            <!--
             <div class="table">
                 <ul class="placar">
                     <li class="placarplayer" id="placarplayer1">0</li>
                     <li class="placarplayer" id="placarplayer2">0</li>
                 </ul>
             </div>
+            -->
         </section>
 
         <div id="divmenu">
@@ -38,6 +40,7 @@
         <script src="js/draw.js"></script>
         <script src="js/funcionamento.js"></script>
         <script src="js/regrasdejogo.js"></script>
+        <script src="js/pontuacao.js"></script>
         
 
     </body>
