Codigo funcionando e atualizado, com velocidade dinamica, porém, com bug de grudar bolinha na raquete.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="pt">
     <head>
         <meta charset="UTF-8">
-        <title>Pong!</title>
+        <title>Tennis!</title>
         <link rel="stylesheet" href="pongprincipal.css">
     </head>
     <body>
 
         <header>
-            <h1 id="titulo">pong.</h1>
+            <h1 id="titulo">tennis.</h1>
         </header>
 
         <section id="gamejs">
@@ -32,6 +32,12 @@
             <section id="menugame">
                 <button type="button" class="botao" id="startgame">start</button>
                 <button type="button" class="botao" id="stopgame">stop</button>
+            </section>
+        </div>
+        <div id="blocodescricao">
+            <section id="descricao">
+                <h2 id="tituloparagrafo">About</h2>
+                <p id="paragrafo">Based on the 1972 classic, tennis brings a minimalist experience of an early days game that everybody loves.</p>
             </section>
         </div>
 
