Primeira versão para produção, porém, com bug da bolinha colar na raquete

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
         <div id="divmenu">
             <section id="menugame">
-                <button type="button" class="botao" id="startgame">start</button>
-                <button type="button" class="botao" id="stopgame">stop</button>
+                <button type="button" class="btn" id="startgame">start</button>
+                <button type="button" class="btn" id="stopgame">stop</button>
             </section>
         </div>
         <div id="blocodescricao">
             <section id="descricao">
-                <h2 id="tituloparagrafo">About</h2>
-                <p id="paragrafo">Based on the 1972 classic, tennis brings a minimalist experience of an early days game that everybody loves.</p>
+                <h2 id="descricao__titulo">About</h2>
+                <p id="descricao__paragrafo">Based on the 1972 classic, tennis brings a minimalist experience of an early days game that everybody loves.</p>
             </section>
         </div>
 
